tests/baselines/reference/instantiatedBaseTypeConstraints2.errors.txt
==== tests/cases/compiler/instantiatedBaseTypeConstraints2.ts (2 errors) ====
    interface A<T extends A<T, S>, S extends A<T, S>> { }
                ~~~~~~~~~~~~~~~~~
!!! instantiatedBaseTypeConstraints2.ts(1,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~~
!!! instantiatedBaseTypeConstraints2.ts(1,32): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface B<U> extends A<B<U>, B<U>> { }